[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["p.p <petipeti3vr.net@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.4.1"
torchvision = "0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
